--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Project Pages
-description: "An Integrated Scientific Blogging Template"
+title: The COVOICE-19 Project
+description: "Developing tools to support identification, diagnosis and prognosis of COVID-19 through AI"
 url: "https://ricardosperes.github.io"
 
 
