--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://ricardosperes.github.io"
 
 # Secondary Parameters
 baseurl: "/COVOICE-19"
-header-img: img/home-bg.jpg
+header-img: img/covoice_bg.png
 headercolor: "#FFFFFF"
 logo: /COVOICE-19/img/logos/covoice_logo_white.png
 
