--- a/_data/members.yml
+++ b/_data/members.yml
@@ -7,7 +7,7 @@
   gplus: https://plus.google.com/+AhmetCecen-GPlus
   bio: TBD
   url: http://ricardosperes.github.io/
-  visible: false
+  visible: true
 
 - name: Ahmet Cecen
   role: Data Scientist / Materials Informatics
