--- a/_data/members.yml
+++ b/_data/members.yml
@@ -2,7 +2,7 @@
 
 - name: Ricardo Silva Peres
   role: Co-Principal Investigator / ML Engineer
-  img: img/peres.jpg
+  img: ../img/peres.jpg
   github: ricardosperes
   gplus: https://plus.google.com/+AhmetCecen-GPlus
   bio: TBD
