--- a/_data/members.yml
+++ b/_data/members.yml
@@ -2,7 +2,7 @@
 
 - name: Ricardo Silva Peres
   role: Co-Principal Investigator / ML Engineer
-  img: ../img/peres.jpg
+  img: https://avatars1.githubusercontent.com/u/33847959?s=460&u=467737711e890bc03df786361affeb7d2de2be11&v=4
   github: ricardosperes
   gplus: https://plus.google.com/+AhmetCecen-GPlus
   bio: TBD
