--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: The COVOICE-19 Project
+title: COVOICE-19 Project
 description: "Developing tools to support identification, diagnosis and prognosis of COVID-19 through AI"
 url: "https://ricardosperes.github.io"
 
