--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,8 @@ url: "https://ricardosperes.github.io"
 baseurl: "/COVOICE-19"
 header-img: img/covoice_bg.png
 headercolor: "#FFFFFF"
-logo: /COVOICE-19/img/logos/covoice_logo_white.png
+#logo: /COVOICE-19/img/logos/covoice_logo_white.png
+logo: /COVOICE-19/img/logos/covoice_text_logo.png
 
 # Tertiary Parameters
 github_username:  ricardosperes
