--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,11 @@ title: COVOICE-19 Project
 description: "Developing tools to support identification, diagnosis and prognosis of COVID-19 through AI"
 url: "https://ricardosperes.github.io"
 
-
-
-
 # Secondary Parameters
 baseurl: "/COVOICE-19"
 header-img: img/covoice_bg.png
 headercolor: "#FFFFFF"
-#logo: /COVOICE-19/img/logos/covoice_logo_white.png
+logo: /COVOICE-19/img/logos/covoice_text_logo.png
 #logo: /COVOICE-19/img/logos/covoice_square_logo.png
 
 # Tertiary Parameters
