--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ url: "https://ricardosperes.github.io"
 
 # Secondary Parameters
 baseurl: "/"
+#baseurl: "/COVOICE-19"
 header-img: img/covoice_bg.png
 headercolor: "#FFFFFF"
 logo: img/logos/covoice_text_logo.png
