--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ url: "https://ricardosperes.github.io"
 
 # Secondary Parameters
 #baseurl: "/"
-#baseurl: "/COVOICE-19"
-header-img: img/covoice_bg.png
+baseurl: "/COVOICE-19"
+header-img: {{base_url}}/img/covoice_bg.png
 headercolor: "#FFFFFF"
-logo: img/logos/covoice_text_logo.png
+logo: {{base_url}}/img/logos/covoice_text_logo.png
 #logo: /COVOICE-19/img/logos/covoice_square_logo.png
 
 # Tertiary Parameters
