--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ logo: img/logos/covoice_text_logo.png
 # Tertiary Parameters
 github_username:  ricardosperes
 project_repository: COVOICE-19
-disqus_shortname: COVOICE-19
+disqus_shortname: covoice19
 g-analytics: UA-75881392-1
 altmetric: true
 
