--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ logo: img/logos/covoice_text_logo.png
 github_username:  ricardosperes
 project_repository: COVOICE-19
 disqus_shortname: covoice19
-g-analytics: UA-75881392-1
+g-analytics: G-C1ZMRRKBBP #UA-75881392-1
 altmetric: true
 
 # Build settings
