--- a/_data/members.yml
+++ b/_data/members.yml
@@ -12,8 +12,9 @@
 - name: Ricardo Silva Peres
   role: Co-Principal Investigator / ML Engineer
   img: https://avatars1.githubusercontent.com/u/33847959?s=460&u=467737711e890bc03df786361affeb7d2de2be11&v=4
-  github: ricardosperes
+  #github: ricardosperes
   #gplus: https://plus.google.com/+AhmetCecen-GPlus
+  gscholar: lkncqlMAAAAJ&hl
   linkedin: ricardosilvaperes
   bio: Ricardo received both his M.Sc. and Ph.D. in Electrical and Computer Engineering from the Nova University of Lisbon in Portugal, specializing in the application of artificial intelligence in smart manufacturing. He is currently an Invited Professor at the same university, integrating the Department of Electrical Engineering of the Faculty of Sciences and Technology. Since 2014, he has been working as a researcher at UNINOVA-CTS, focusing on industrial artificial intelligence, machine learning and cyber-physical systems. 
   url: http://rics.uninova.pt/
