--- a/_data/members.yml
+++ b/_data/members.yml
@@ -27,8 +27,8 @@
   #gplus: https://plus.google.com/+AhmetCecen-GPlus
   #gscholar: lkncqlMAAAAJ&hl
   #linkedin: ricardosilvaperes
-  bio: Dr. Clara Capucho is an Otorhinolaryngologist and the head of the voice unit at the Egas Moniz Hospital, part of the Occidental Lisbon Hospital Centre.
-  #url: http://rics.uninova.pt/
+  bio: Dr. Clara Capucho is an Otorhinolaryngologist and the head of the voice unit at the Egas Moniz Hospital, part of the Occidental Lisbon Hospital Centre. She received her Ph.D. with honours from the Nova University of Lisbon, Faculty of Medical Sciences in Portugal, focusing on the multidimensional analysis of the professional voice.
+  url: https://www.chlo.min-saude.pt/
   visible: true
 
 - name: Ahmet Cecen
