--- a/_data/members.yml
+++ b/_data/members.yml
@@ -5,6 +5,8 @@
   img: https://rics.uninova.pt/img/team/jbarata.jpg
   #github: ricardosperes
   #gplus: https://plus.google.com/+AhmetCecen-GPlus
+  gscholar: 4G8tKCsAAAAJ&hl
+  linkedin: josé-barata-882678
   bio: José Barata is a professor at the Department of Electrical Engineering of the Nova University of Lisbon and a senior researcher of the UNINOVA Institute. He has a PhD degree in Robotics and Integrated Manufacturing since 2004 from the Nova University of Lisbon. Dr. Barata has participated in more than 15 International Research projects involving different programmes (NMP, IST, ITEA, ESPRIT).
   url: http://rics.uninova.pt/
   visible: true
