--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ g-analytics: G-C1ZMRRKBBP #UA-75881392-1
 altmetric: true
 
 # Build settings
-gems: [jekyll-paginate]
+gems: [jekyll-paginate,jekyll-sitemap]
 markdown: kramdown
 highlighter: rouge
 permalink: pretty
